rising_tide/src/index.css
:root{
  /*--font: "Copperplate";*/
  --color: rgb(165, 79, 42);
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;

    background-color: #e4f5ff;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

p{
  font-family: var(--font);
  color: var(--color);
}
h1{
  font-family: var(--font);
  color: var(--color);
}
h3{
  font-family: var(--font);
  color: var(--color);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.navbar {
  background-color: lightblue;
  
}

.nav-link{
  overflow-wrap: break-word;
  word-wrap: break-word;
  hyphens: auto;
  
}
.navbarLink{
  font-size: 2.2vw;
  font-family: var(--font);
  color: rgb(62, 110, 158);
}

@media screen and (min-width: 900px) {
  .navbarLink{
     font-size: 24px;
  }
}

button{
  background-color: lightblue;
  border-radius: 10px;
}

input[type=textbox], input[type=password], input[type=email]{
  margin-bottom: 10px;
  width: 40%
}

input[type=radio], label, input[type=checkbox]{
  vertical-align: middle;
  margin-top: 10px;
}

label{
  font-size: 3vw;
  margin-left: 5px;
  font-family: var(--font);
  color: var(--color);
}
@media screen and (min-width: 900px) {
  label{
     font-size: 25px;
  }
}

#moodTrackingDiv{
  border-radius: 20px;
  background-color:#fefcf0;
  margin: 10px;
  padding-bottom: 10px;
  
}

/*Middle box*/
#container{
  padding-top: 20px;
  background-color: #f8f3de;
  display: flex;
  flex-flow: column;
  align-items: stretch;
  padding-bottom: 20px;
  
}

#weeklyViewContainer{
  padding-top: 20px;
  background-color: #f8f3de;
  display: flex;
  flex-flow: column;
  align-items: stretch;
  width: 60%;
  padding-bottom: 20px;
}

/*Also includes archive page and weeklyview*/
#containerSignUpOrOut{
  padding-top: 20px;
  background-color: #f8f3de;
  display: flex;
  flex-flow: column;
  align-items: stretch;
  height: 100vh;
  
}

img{
  height: 20vw;
}
@media screen and (min-width: 1000px) {
  img{
     height: 200px;
  }
}

footer{
  background-color: lightblue;
}

/*The true background*/
#root{
  background-color: #e7c7b4;
}

#navJournalButton{
  margin-left: 30px;
}

#navTable, #moodTable, #archivePageTable, #weeklyViewTable{
  width: 100%;
  table-layout: fixed;
  text-align: center;
}

textarea{
  resize: none;
}

textarea{
  resize: none;
  display: block;
  font-size: 2vw;
  line-height: 25px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  border-radius: 70px;
  height: 300px;
  width: 70%;
  border-color: rgb(135, 210, 231);
  padding: 30px;
  outline: none;
  overflow: hidden;
}

.journalHeader{
  margin-bottom: 40px;
}

#journalSubmitBtn, #signUpBtn, #signInBtn, #archiveSubmitBtn{
  margin: 20px;
  background-color: rgb(133, 204, 227);
  border: none;
}

button{
  margin: 8px;
  background-color: rgb(133, 204, 227);
  border-color: rgb(133, 204, 227);
  border-radius: 10px;
}

#habitWidget{
  border-radius: 10px;
  background-color:#fefcf0;
  margin: 10px 40px;
}

#habitTable{
  width: 100%;
  vertical-align: middle;
}

input:focus, textarea {
  outline: none;
}

#newHabitInput{
  width: 500px;
  border-radius: 10px;
  border: none;
  background-color: #fefcf0;
}

#habitTable tr {
  border-bottom: solid #e7c7b4;
  font-size: 20px;
  height: 50px;
  overflow-wrap: break-word;
  word-wrap: break-word;
  hyphens: auto;
}

#habitsLabel{
  display: inline;
  margin-left: 10px;
}

input[type=checkbox]{
  width: 5vw;
  height: 5vw;
  vertical-align: middle;
  margin: 10px;
}

.signUpFormLabels{
  display: inline;
}

#deleteHabitButton, #addHabitButton{
  margin-left: 1vw;
}

.weeklyViewTableBorder{
border-left: solid #e7c7b4;

}

#weeklyViewTable{
  margin-top: 10px;
  margin-bottom: 10px;
}
.weeklyShell{
  margin: 10px;
  height: 15vw;
}
@media screen and (min-width: 900px) {
  .weeklyShell{
     height: 100px;
  }
}

.helpDiv{
  margin-top: 20px;
  padding: 10px;
  background-color: #ece0c1;
  border-radius: 5px;
}

.indented{
  margin-left: 5vw;
}

